--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,13 +3,20 @@
   "name": "Hobbit Day",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "./favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "./images/favicon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "density": 4.0
     }
   ],
   "start_url": "./index.html",
-  "display": "standalone",
+  "display": "fullscreen",
+  "orientation": "any",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
