--- a/static/Dockerfile
+++ b/static/Dockerfile
@@ -1,3 +1,6 @@
 FROM nginx:stable-alpine
 
+# COPY nginx/nginx.conf /etc/nginx/conf.d/nginx.conf
+# COPY nginx/ssh/visit.X509_certificate.crt /etc/nginx/certs/
+# COPY nginx/ssh/visit.private.key /etc/nginx/certs/
 COPY site /usr/share/nginx/html
