--- a/static/nginx/nginx.conf
+++ b/static/nginx/nginx.conf
@@ -1,6 +1,13 @@
 server {
-    listen 443 ssl;
-    server_name  localhost;
-    ssl_certificate /etc/nginx/certs/visit.X509_certificate.crt;
-    ssl_certificate_key /etc/nginx/certs/visit.private.key;
+    listen       443 ssl;
+    server_name  visit.shrugcoding.click;
+
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }
+
+    ssl on;
+    ssl_certificate      /etc/nginx/certs/visit-cert.pem;
+    ssl_certificate_key  /etc/nginx/certs/visit-privkey.pem;
 }
