--- a/static/cloudformation/visit.cform.yaml
+++ b/static/cloudformation/visit.cform.yaml
@@ -20,15 +20,10 @@ Parameters:
     Type: String
     Default: 10.192.0.0/16
 
-  PublicSubnet1CIDR:
+  PublicSubnetCIDR:
     Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
     Type: String
     Default: 10.192.10.0/24
-
-  # PublicSubnet2CIDR:
-  #   Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
-  #   Type: String
-  #   Default: 10.192.11.0/24
 
 Resources:
 
@@ -65,32 +60,21 @@ Resources:
       InternetGatewayId: !Ref InternetGateway
       VpcId: !Ref VPC
 
-  PublicSubnet1:
+  PublicSubnet:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !Select [ 0, !GetAZs '' ]
-      CidrBlock: !Ref PublicSubnet1CIDR
+      CidrBlock: !Ref PublicSubnetCIDR
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
           Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
 
-  # PublicSubnet2:
-  #   Type: AWS::EC2::Subnet
-  #   Properties:
-  #     VpcId: !Ref VPC
-  #     AvailabilityZone: !Select [ 1, !GetAZs  '' ]
-  #     CidrBlock: !Ref PublicSubnet2CIDR
-  #     MapPublicIpOnLaunch: true
-  #     Tags:
-  #       - Key: Name
-  #         Value: !Sub ${EnvironmentName} Public Subnet (AZ2)
-
   ec2VisitView:
     Type: AWS::EC2::Instance
     Properties:
-      SubnetId: !Ref PublicSubnet1
+      SubnetId: !Ref PublicSubnet
       KeyName: visit-key
       DisableApiTermination: false
       ImageId: ami-0be2609ba883822ec
@@ -104,9 +88,9 @@ Resources:
         amazon-linux-extras install docker
         service docker start
         usermod -a -G docker ec2-user
-        docker run -d -p 80:80 -p 443:443 rsming/visit:1.0
+        docker run -d -p 443:443 rsming/visit:1.0
       Tags:
-        - Key: name
+        - Key: Name
           Value: visit.view
         - Key: framework
           Value: static-html
@@ -119,10 +103,6 @@ Resources:
       VpcId: !Ref VPC
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
           CidrIp: 0.0.0.0/0
@@ -131,7 +111,7 @@ Resources:
           ToPort: 22
           CidrIp: 0.0.0.0/0
       Tags:
-        - Key: name
+        - Key: Name
           Value: visit.view.access
         - Key: access
           Value: frontend
@@ -152,17 +132,11 @@ Resources:
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref InternetGateway
 
-  PublicSubnet1RouteTableAssociation:
+  PublicSubnetRouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref PublicRouteTable
-      SubnetId: !Ref PublicSubnet1
-
-  # PublicSubnet2RouteTableAssociation:
-  #   Type: AWS::EC2::SubnetRouteTableAssociation
-  #   Properties:
-  #     RouteTableId: !Ref PublicRouteTable
-  #     SubnetId: !Ref PublicSubnet2
+      SubnetId: !Ref PublicSubnet
 
   NoIngressSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -179,18 +153,11 @@ Outputs:
 
   PublicSubnets:
     Description: A list of the public subnets
-    Value: !Join [ ",", [ !Ref PublicSubnet1 ]]
-  # PublicSubnets:
-  #   Description: A list of the public subnets
-  #   Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
+    Value: !Join [ ",", [ !Ref PublicSubnet ]]
 
-  PublicSubnet1:
+  PublicSubnet:
     Description: A reference to the public subnet in the 1st Availability Zone
-    Value: !Ref PublicSubnet1
-
-  # PublicSubnet2:
-  #   Description: A reference to the public subnet in the 2nd Availability Zone
-  #   Value: !Ref PublicSubnet2
+    Value: !Ref PublicSubnet
 
   NoIngressSecurityGroup:
     Description: Security group with no ingress rule
