--- a/static/k8s/visit.service.yml
+++ b/static/k8s/visit.service.yml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
- name: service-visit
+  name: service-visit
 spec:
- type: LoadBalancer
- selector:
+  type: NodePort
+  selector:
     app: pod-visit
- ports:
-  - name: "443"
-    port: 443
-    targetPort: 443
-  - name: "80"
-    port: 80
-    targetPort: 80
+  ports:
+    - name: http
+      port: 80
+      targetPort: 80
