deployment fixed for k8s

--- a/static/k8s/visit.ingress.yml
+++ b/static/k8s/visit.ingress.yml
@@ -2,18 +2,13 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-visit
-  # annotations:
-  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
-    # nginx.ingress.kubernetes.io/app-root: /
 spec:
   tls:
     - hosts:
-      - visit.shrugcoding.com
-      # This assumes tls-secret exists and the SSL
-      # certificate contains a CN for foo.bar.com
+      - visit.shrugcoding.click
       secretName: visit-secret
   rules:
-    - host: minikube.visit.shrugcoding.com
+    - host: visit.shrugcoding.click
       http:
         paths:
           - path: /
