--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,8 +10,7 @@ pipeline {
         AWS_SECRET_ACCESS_KEY = credentials('jenkins-aws-secret-access-key')
         AWS_ENV_NAME = 'dev'
         AWS_REGION   = 'us-east-1'
-        AWS_NETWORK_STACK_NAME = 'shrugcoding-network'
-        AWS_APP_STACK_NAME     = 'visit'
+        AWS_APP_STACK_NAME = 'visit'
     }
     stages {
         stage('build') {
@@ -44,14 +43,14 @@ pipeline {
                             sh """
                                 aws cloudformation deploy --parameter-overrides EnvironmentName=${AWS_ENV_NAME} \
                                     --region ${AWS_REGION} --template-file networkstack.cform.json \
-                                    --stack-name ${AWS_NETWORK_STACK_NAME}
-                                aws cloudformation wait stack-create-complete --region ${AWS_REGION} --stack-name $AWS_NETWORK_STACK_NAME
+                                    --stack-name ${AWS_APP_STACK_NAME}
+                                aws cloudformation wait stack-create-complete --region ${AWS_REGION} --stack-name ${AWS_APP_STACK_NAME}
                             """
                         }
                         if (params.AWS_VISIT_APP_STACK == 'destroy') {
                             sh """
-                                aws cloudformation delete-stack --region ${AWS_REGION} --stack-name ${AWS_NETWORK_STACK_NAME}
-                                aws cloudformation wait stack-delete-complete --region ${AWS_REGION} --stack-name ${AWS_NETWORK_STACK_NAME}
+                                aws cloudformation delete-stack --region ${AWS_REGION} --stack-name ${AWS_APP_STACK_NAME}
+                                aws cloudformation wait stack-delete-complete --region ${AWS_REGION} --stack-name ${AWS_APP_STACK_NAME}
                             """
                         }
                     }
